--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.plants{
+  margin-top: 32px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant{
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
