--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,30 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Solution */
+
+.modal{
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+
+.icon{
+  flex-shrink: 0;
+}
+
+.upper{
+  display: flex;
+  font-size: large;
+  margin-bottom: 8px;
+}
+
+.close-button{
+  margin-left: auto;
+}
+
+.text{
+  margin-bottom: 16px;
+}
