--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,44 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+/* solution */
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.left-links, .right-links{
+  list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+:link{
+  color: rgb(99, 98, 98);
+  text-decoration: none;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.footer{
+  display: flex;
+  background: #eee;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+button{
+  padding: 9px;
+}
