--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -26,3 +26,65 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* solution */
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.header{
+  font-weight: 900;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 24px;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+.sidebar{
+  flex-shrink: 0;
+  padding: 16px;
+  /* width: 300px; */
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content{
+  display: flex;
+  flex: 1;
+}
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: stretch;
+  padding: 32px;
+}
+
+.card{
+  padding: 16px;
+  margin: 16px;
+  flex: 0 1 300px;
+}
